# ML

./: .gitattributes  .gitignore  EXPERIMENTS_INDEX.md  FEATURE_CHECKLIST.md  QUICK_START_VISUALIZATION.md  README.md  README_adalab.md  VISUALIZATION_METHODS.md  VISUALIZATION_SUMMARY.md  baseline_est500_depth2.py  compare_robust_methods.py  compare_visualization_tools.py  demo_robust.py  demo_visualization.sh  demo_wrapper.py  environment.yaml  example_evaluation.py  example_feature_importance.py  inspect_test_data.py  main.py  main.py.bak  main_experiment.py  main_hog.py  monitor.py  noise5_est500_depth2.py  pyproject.toml  requirements.txt  run_visualization.sh  test_chunk_dump.py  test_experiment_wrapper.py  train.py  train_long.py  train_original.py  train_with_clean_data.py  train_with_noise_monitored.py  train_with_noise_track.py  visualize_3d_tvtk.py  visualize_from_results.py  visualize_overfitting.py  visualize_overfitting_enhanced.py
configs/: TEMPLATE.json  baseline_est500_depth2_v1.json  long_train_val.json  main_hog.json  main_hog_v2.json  main_hog_v4.json  main_hu.json  main_original.json  noise20_est1000_depth2.json  noise5_est500_depth2_v1.json  noise_overfit.json  overfit_tune.json  test_end2end.json  test_experiment_wrapper.json
docs/: 3d_visualization_guide.md  VISUALIZATION_ENHANCEMENT.md  generalization_test_guide.md  monitor.md  overfitting_visualization_guide.md  robust_adaboost_guide.md  visualization_guide.md  visualize_from_results_guide.md  wrapper_and_config.md
src/: data.py  evaluation.py  monitor.py  patch.py  robust_adaboost.py  utils.py
(+229 files in other folders)
